syntax = "proto3";
package sms;


import "sms/SmsMessage.proto";
import "common/Response.proto";
import "google/api/annotations.proto";

option java_package = "com.bubble.sms.grpc.service";
option java_outer_classname = "SmsServiceProto";

service SmsService {

    //发送注册验证码
    rpc sendRegistrySms(SendSms) returns (common.Response) {
        option (google.api.http) = {
            post: "/api/v1/sms"
            body: "*"
        };
    }

    //查找短信发送记录
    rpc findRecordByToken(SmsToken) returns (common.Response) {
        option (google.api.http) = {
            get: "/api/v1/sms/{token}"
        };
    }

}

enum Status{
  SUCCESS = 0;

  /** 未找到短信验证码 */
  VERIFICATION_CODE_NOT_FOUND = 1000;


}